--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -34,12 +34,12 @@
     color: #af968b;
 }
 
-.header nav .nav-cart {
+.header nav .navcart {
     cursor: pointer;
     position: relative;
 }
 
-.header nav .nav-cart span {
+.header nav .navcart span {
     position: absolute;
     top: -12px;
     right: -7px;
@@ -83,7 +83,7 @@
         top: 10px;
         right: 20px;
     }
-    .header ul.toggle {
+    .header ul .toggle {
         top: 0;
     }
 }
