--- a/styles/Slider.module.css
+++ b/styles/Slider.module.css
@@ -9,13 +9,14 @@
 .image {
     width: 100%;
     height: 100%;
-    border-radius: 10px;
+    border-radius: 6rem;
+    padding: 5rem;
 }
 
-.right-arrow {
+.rightarrow {
     position: absolute;
     top: 50%;
-    right: 32px;
+    right: 2px;
     font-size: 2rem;
     color: #c5aca1;
     z-index: 10;
@@ -23,10 +24,10 @@
     user-select: none;
 }
 
-.left-arrow {
+.leftarrow {
     position: absolute;
     top: 50%;
-    left: 32px;
+    left: 2px;
     font-size: 2rem;
     color: #c5aca1;
     z-index: 10;
