--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,6 +1,5 @@
 html,
 body {
-  width: 100%;
   padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
@@ -15,3 +14,11 @@ a {
   box-sizing: border-box;
 }
 
+.main {
+  max-width: 1200px;
+  width: 100%;
+  margin: 0 auto;
+  box-shadow: 0 0 5px #B79293;
+  padding: 2rem 1.5rem;
+  margin: 3rem 6rem;
+}
