added footer and edited layout component.

--- a/styles/Products.module.css
+++ b/styles/Products.module.css
@@ -57,7 +57,7 @@
     border-radius: 10px;
     outline: none;
     background: #c5aca1;
-    color: #ddd;
+    color: rgb(255, 255, 255);
     width: 100%;
     height: 40px;
     display: block;
